--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="#" class="logo">Portfolio</a>
+        <a href="#" class="logo">Sandali W.</a>
 
         <i class="bx bx-menu" id="menu-icon"></i>
 
@@ -170,4 +170,5 @@
 
     <script src="js/script.js"></script>
 </body>
+
 </html>
