--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -18,7 +18,7 @@
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
             <a href="#about">About</a>
-            <a href="#portfolio">Portfolio</a>
+            <a href="#portfolio">Projects</a>
             <a href="#contact">Contact</a>
     
         </nav>
@@ -172,3 +172,4 @@
 </body>
 
 </html>
+
